[gd_scene load_steps=10 format=3 uid="uid://daxpl8wgwrd7w"]

[ext_resource type="Texture2D" uid="uid://cc2bgbvc2jubk" path="res://assets/textures/entity/hunter_fish.png" id="1_p6sfq"]
[ext_resource type="Script" uid="uid://b8wcqwldkw4th" path="res://scripts/entity/actor/hunter_fish.gd" id="1_snnp5"]
[ext_resource type="PackedScene" uid="uid://dgefqrqeh3evl" path="res://scenes/component/movement.tscn" id="2_vbyxb"]
[ext_resource type="PackedScene" uid="uid://yr7unnis4qow" path="res://scenes/component/fish_sprite.tscn" id="3_mrtdc"]
[ext_resource type="PackedScene" uid="uid://b0rymrbfbbdhr" path="res://scenes/component/hurt_box.tscn" id="3_vbyxb"]
[ext_resource type="Texture2D" uid="uid://hyyf28m6abmq" path="res://assets/textures/entity/hunter_fish_normals.png" id="4_mrtdc"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ce58k"]
resource_local_to_scene = true

[sub_resource type="AtlasTexture" id="AtlasTexture_ce58k"]
atlas = ExtResource("1_p6sfq")
region = Rect2(32, 16, 32, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_snnp5"]

[node name="HunterFish" type="Node2D"]
script = ExtResource("1_snnp5")

[node name="Movement" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("2_vbyxb")]
entity = NodePath("..")

[node name="FishSprite" parent="." instance=ExtResource("3_mrtdc")]
texture = SubResource("CanvasTexture_ce58k")
diffuse_texture = ExtResource("1_p6sfq")
normal_texture = ExtResource("4_mrtdc")
outline_texture = SubResource("AtlasTexture_ce58k")
visible_rect = Rect2(-16, -8, 32, 16)
show_time = 2.5

[node name="HurtBox" parent="." instance=ExtResource("3_vbyxb")]
collision_layer = 4
collision_mask = 2
max_health = 1
health = 1
shape = SubResource("CircleShape2D_snnp5")

[connection signal="dead" from="HurtBox" to="." method="_on_hurt_box_dead"]
[connection signal="pinged" from="HurtBox" to="." method="_on_hurt_box_pinged"]
